@@ -16,8 +16,6 @@
 		<ikube.war>ikube.war</ikube.war>
 		<final.name>${project.build.finalName}.${project.packaging}</final.name>
 		<maven.build.timestamp.format>dd-MM-yyyy HH:mm:ss</maven.build.timestamp.format>
-		<!-- axis.version>1.4</axis.version -->
-		<!-- jaxrpc.api.version>1.1</jaxrpc.api.version -->
 		<jersey.version>1.9.1</jersey.version>
 		<jaxb-api.version>2.2.1</jaxb-api.version>
 	</properties>
@@ -71,6 +69,38 @@
 					</execution>
 				</executions>
 			</plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <path>/ikube</path>
+                    <url>http://localhost:8080/manager</url>
+                    <update>true</update>
+                    <warDirectory>./</warDirectory>
+                    <!--<contextFile>${basedir}/src/main/webapp/META-INF/context.xml</contextFile>-->
+                    <systemProperties>
+                        <JAVA_OPTS>-Xms512m -Xmx4096m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled</JAVA_OPTS>
+                    </systemProperties>
+                </configuration>
+
+                <dependencies>
+                    <!--<dependency>
+                        <groupId>com.oracle</groupId>
+                        <artifactId>ojdbc14</artifactId>
+                        <version>10.2.0.5.0</version>
+                    </dependency>-->
+                </dependencies>
+
+                <executions>
+                    <execution>
+                        <configuration>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
 			<!-- 
 				This plugin starts a Jetty server before the integration tests and stops it after the 
 				integration tests. It can also be used to start a jetty server from the command line for testing. 
@@ -116,7 +146,7 @@
 				</executions>
 				<dependencies>
 					<dependency>
-						<!-- 
+						<!--
 							XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused 
 							by internal dependencies of Jetty, which use version 2.5, but have it packaged in a different 
 							group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
@@ -181,14 +211,25 @@
 			<version>6.1.11</version>
 			<type>jar</type>
 			<scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty-util</artifactId>
-			<!-- <version>7.0.0.v20091005</version> -->
 			<version>6.1.11</version>
 			<type>jar</type>
-			<scope>compile</scope>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 
 		<dependency>
